# Internship

./: .gitignore  DQC&ETL.ipynb  DQC.py  DQL&ETL.ipynb  Dockerfile  EDA.ipynb  ETL.py  Pipeline.py  README.md  data.dvc  docker-compose.yaml  experiment.py  pyproject.toml  requirements.txt  submission.ipynb  train&test.ipynb
.dvc/: config
.github/workflows/: experiment.yaml
dags/: experiment.py
ds_package/: features.py  hyperopt.py  pipeline.py  validation.py
